blocks/profile.css
.profile {
  display: flex;
  margin: 35px 0 50px;
}

.profile__image-container {
  width: 120px;
  height: 120px;
}

.profile__image {
  max-width: 168.75px;
  border-radius: 50%;
}

.profile__name {
  font-size: 42px;
  font-weight: 500;
  line-height: 48px;
  margin-bottom: 16px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 373px;
}

.profile__info {
  font-size: 18px;
  font-weight: 400;
  line-height: 21px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 415px;
}

.profile__edit {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex-basis: 65%;
  margin: 16px;
}

.profile__edit-container {
  display: flex;
  align-items: center;
}

.profile__add-button {
  background-image: url(../images/Add_Button.svg);
  background-repeat: no-repeat;
  background-color: #000;
  border: 0;
  width: 150px;
  height: 50px;
  cursor: pointer;
  margin: auto;
}

.profile__add-button:hover {
  opacity: 0.6;
}

.profile__edit-button {
  background-image: url(../images/Edit_Button.svg);
  background-repeat: no-repeat;
  background-color: #000;
  border: 0;
  width: 24px;
  height: 24px;
  cursor: pointer;
  margin: 0 0 9px 18px;
}

.profile__edit-button:hover {
  opacity: 0.6;
}

@media screen and (min-width: 320px) and (max-width: 1024px) {
  .profile {
    flex-direction: column;
    align-items: center;
    margin: 35px 0 50px;
  }
  .profile__edit {
    align-items: center;
  }
  .profile__name {
    font-size: 22px;
    line-height: normal;
    max-width: 196px;
  }
  .profile__info {
    font-size: 14px;
    line-height: 17px;
    max-width: 150px;
  }
  .profile__add-button {
    margin-top: 20px;
  }
  .profile__image-container {
    margin-bottom: 10px;
  }
  .profile__edit-button {
    margin: 0 0 23px 18px;
  }
}

